--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>My translator</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+<style>
+  html{
+    width: 100%;
+    height: 100%;
+    color: gray;
+    fill: gray;
+  }
+  body{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+</style>
